--- a/Artigos/Software Livre/main.tex
+++ b/Artigos/Software Livre/main.tex
@@ -3,7 +3,7 @@
 
 \sloppy
 
-\title{}
+\title{Atom - O Editor Open Source do GitHub}
 
 \author{Ricardo Henrique Brunetto\inst{1}}
 
@@ -17,9 +17,10 @@
 
 	\maketitle
 
-	{\resumo{}}
+	{\resumo{O presente trabalho visa a apresentar de forma instrutiva as funcionalidades do editor de texto Atom e tratar a respeito de suas vantagens, desvantagens, formas de instalação e recursos que o diferenciam dos demais editores.}}
 
   \section{Introdução}
+	Este trabalho tem como objetivo apresentar ao
 
 	\bibliographystyle{sbc}
 	\bibliography{references}
