--- a/Artigos/Memoria/main.tex
+++ b/Artigos/Memoria/main.tex
@@ -3,14 +3,14 @@
 
 \sloppy
 
-\title{}
+\title{Memória Virtual e Algoritmos de Paginação}
 
-\author{Ricardo Henrique Brunetto\inst{1}}
-
+\author{Ricardo Henrique Brunetto (94182)\\
+				Rafael Rodrigues dos Santos (94075)\\
+				Thais Aparecida Silva Camacho (93807)}
 
 \address{Departamento de Informática -- Universidade Estadual de Maringá (UEM)\\
 	Maringá -- PR -- Brasil
-	\email{ra94182@uem.br}
 }
 
 \begin{document}
