Software Livre - Inicio Intro

--- a/Artigos/Software Livre/main.tex
+++ b/Artigos/Software Livre/main.tex
@@ -3,7 +3,7 @@
 
 \sloppy
 
-\title{Atom - O Editor Open Source do GitHub}
+\title{Atom\\O Editor Open Source do GitHub}
 
 \author{Ricardo Henrique Brunetto\inst{1}}
 
@@ -17,10 +17,12 @@
 
 	\maketitle
 
-	{\resumo{O presente trabalho visa a apresentar de forma instrutiva as funcionalidades do editor de texto Atom e tratar a respeito de suas vantagens, desvantagens, formas de instalação e recursos que o diferenciam dos demais editores.}}
+	{\resumo{O presente trabalho visa a apresentar de forma instrutiva as funcionalidades do editor de texto Atom e tratar a respeito de suas vantagens, desvantagens, formas de instalação e recursos que o diferenciam dos demais editores. Este trabalho segue referência direta da documentação oficial do Atom\cite{doc:atom}.}}
 
   \section{Introdução}
-	Este trabalho tem como objetivo apresentar ao
+	O Atom é um editor de texto de código aberto desenvolvido pelo GitHub e liberado como beta em junho de 2015, projetado para combinar flexibilidade e extensibilidade. De forma geral, o Atom é um editor focado em desenvolvimento de código, oferecendo recursos e ferramentas para solucionar dos mais ínfimos aos mais significativos inconvenientes do ofício. Além disso, por ser um software livre e aberto e fornecer suporte à extensões criadas pelos própriros usuários, o Atom passou a ser conhecido como "Editor de Texto Hackeável do Século 21".
+
+	O Atom foi desenvolvido através do Electron e de outras tecnologias web (HTML, Javascript e CSS).
 
 	\bibliographystyle{sbc}
 	\bibliography{references}
