--- a/Artigos/Software Livre/references.bib
+++ b/Artigos/Software Livre/references.bib
@@ -1,25 +1,6 @@
-@book{durkheim1977divisao,
-  title={Da divis{\~a}o do trabalho social},
-  author={Durkheim, {\'E}mile},
-  year={1977},
-  publisher={Martins Fontes}
-}
-@article{durkheim1977educaccao,
-  title={A educa{\c{c}}{\~a}o como processo socializador: fun{\c{c}}{\~a}o homogeneizadora e fun{\c{c}}{\~a}o diferenciadora},
-  author={Durkheim, Emile},
-  journal={Educa{\c{c}}{\~a}o e sociedade: leituras de sociologia da educa{\c{c}}{\~a}o. S{\~a}o Paulo: Nacional},
-  year={1977}
-}
-@article{huntington1997choque,
-  title={O choque de civiliza{\c{c}}{\~o}es},
-  author={Huntington, Samuel and others},
-  journal={Rio de janeiro: Objetiva},
-  year={1997}
-}
-@book{chiavenato2002teoria,
-  title={Teoria geral da administra{\c{c}}{\~a}o},
-  author={Chiavenato, Idalberto},
-  volume={2},
-  year={2002},
-  publisher={Elsevier Brasil}
+@misc{doc:atom,
+  author = {GitHub},
+  title = {Atom Flight Manual},
+  howpublished = {\url{http://flight-manual.atom.io}},
+  note = {Acessado em: 23/12/2017}
 }
