--- a/Artigos/Software Livre/references.bib
+++ b/Artigos/Software Livre/references.bib
@@ -4,3 +4,9 @@
   howpublished = {\url{http://flight-manual.atom.io}},
   note = {Acessado em: 23/12/2017}
 }
+@misc{doc:chromium,
+  author = {Chromium},
+  title = {Chromium Projects},
+  howpublished = {\url{https://www.chromium.org/}},
+  note = {Acessado em: 27/12/2017}
+}
