--- a/Artigos/Software Livre/main.tex
+++ b/Artigos/Software Livre/main.tex
@@ -17,12 +17,25 @@
 
 	\maketitle
 
-	{\resumo{O presente trabalho visa a apresentar de forma instrutiva as funcionalidades do editor de texto Atom e tratar a respeito de suas vantagens, desvantagens, formas de instalação e recursos que o diferenciam dos demais editores. Este trabalho segue referência direta da documentação oficial do Atom\cite{doc:atom}.}}
+	{\resumo{O presente trabalho visa a apresentar de forma instrutiva as funcionalidades do editor de texto Atom e tratar a respeito de suas vantagens, desvantagens, formas de instalação e recursos que o diferenciam dos demais editores. Este trabalho segue referência direta da documentação oficial do Atom \cite{doc:atom}.}}
 
   \section{Introdução}
 	O Atom é um editor de texto de código aberto desenvolvido pelo GitHub e liberado como beta em junho de 2015, projetado para combinar flexibilidade e extensibilidade. De forma geral, o Atom é um editor focado em desenvolvimento de código, oferecendo recursos e ferramentas para solucionar dos mais ínfimos aos mais significativos inconvenientes do ofício. Além disso, por ser um software livre e aberto e fornecer suporte à extensões criadas pelos própriros usuários, o Atom passou a ser conhecido como "Editor de Texto Hackeável do Século 21".
 
-	O Atom foi desenvolvido através do Electron e de outras tecnologias web (HTML, Javascript e CSS).
+	O Atom foi desenvolvido através do Electron e de outras tecnologias web (HTML, Javascript e CSS). O ponto-chave do Atom como editor de texto é um compromisso com a hackeabilidade e usabilidade, o que significa que os principais avanços e diferenciais do software se concentram em proporcionar ao usuário uma forma de personalizar por completo sua experiência. Dessa forma, o usuário consegue criar \textit{plug-ins} e extensões conforme sua necessidade e propósito.
+
+	Dessa forma, o Atom é composto por seu núcleo, ferramentas e componentes que são adotados como oficiais e vêm instalados (bem como o próprio editor), e pelos \textit{add-ons} desenvolvidos pelos próprios usuários e disponíveis em repositórios na web (em especial no GitHub). A respeito do núcleo do Atom, alguns aspectos são interessantes e passíveis de abordagem.
+
+	Duas décadas de desenvolvimento Web permitiram que a mesma evoluísse para uma incrível e poderosa plataforma. Contudo, codificar é uma tarefa especial que requer ferramentas dedicadas. Por isso, o Atom não foi escrito como uma aplicação web tradicional, mas sim como uma variante específica do Chromium, dedicada à escrita de texto.
+
+	Abrindo um rápido parênteses, o Chromium é um conjunto de projetos que incluem um navegador web de código aberto e livre que a Google usa como base para o desenvolvimento do Google Chrome, e um sistema operacional onde a Google também se baseia para o Chrome OS. Mais informações podem ser encontradas em \cite{doc:chromium}.
+
+	Outro grande benefício é garantir que tudo está rodando na mais nova versão do Chromium. Isso significa que não há preocupações em relação à compatibilidade ou versionamentos. Dessa forma, os mais recentes recursos e frameworks desenvolvidos na Web para uso em aplicações podem ser incluídos no Atom sem que haja problemas de compatibilidade com projetos já em desenvolvimento.
+
+	Desenvolver um editor de texto baseado em tecnologias Web é um acerto no sentido em que se tem grande capacidade de crescimento, visto que, embora as tecnolgias nativas variem entre si, as tecnologias Web permanecem por serem multi-plataforma e irrestritas quanto às possiblidades de desenvolvimento.
+
+	De acordo com os próprios desenvolvedores, o Atom exerce um papel complementar à função do GitHub de proporcionar software melhor através do trabalho em equipe, o que implica que o editor é, na verdade, um investimento à longo prazo, sempre respaldado pelo suporte do próprio GitHub. Além disso, conforme outros editores como Emacs e Vim demonstraram com o passar dos anos, o desenvolvimento de um software estável, de grande comunidade e eficiente, necessita ter código aberto.
+
 
 	\bibliographystyle{sbc}
 	\bibliography{references}
