--- a/Artigos/Software Livre/main.tex
+++ b/Artigos/Software Livre/main.tex
@@ -36,6 +36,14 @@
 
 	De acordo com os próprios desenvolvedores, o Atom exerce um papel complementar à função do GitHub de proporcionar software melhor através do trabalho em equipe, o que implica que o editor é, na verdade, um investimento à longo prazo, sempre respaldado pelo suporte do próprio GitHub. Além disso, conforme outros editores como Emacs e Vim demonstraram com o passar dos anos, o desenvolvimento de um software estável, de grande comunidade e eficiente, necessita ter código aberto.
 
+	\section{Instalação}
+
+	\section{Uso do Atom}
+
+	\section{Hackeando o Atom}
+
+	\section{Conclusão e Análise}
+	Dentre as análises
 
 	\bibliographystyle{sbc}
 	\bibliography{references}
