Alterações - Software Livre

--- a/Artigos/Segurança/main.tex
+++ b/Artigos/Segurança/main.tex
@@ -3,7 +3,7 @@
 
 \sloppy
 
-\title{}
+\title{Técnicas de Prevenção de DeadLock\\Em Sistemas Operacionais}
 
 \author{Ricardo Henrique Brunetto\inst{1}}
 
