Software Livre concluído

--- a/Artigos/Software Livre/Preambulo-sbc.tex
+++ b/Artigos/Software Livre/Preambulo-sbc.tex
@@ -5,6 +5,7 @@
 \usepackage{hyperref}
 \usepackage{sbc-template}
 \usepackage{fancyvrb}
+\usepackage{bigfoot}
 \usepackage{amsfonts}
 \usepackage{amsmath}
 \usepackage{graphicx,url}
