--- a/Artigos/Software Livre/references.bib
+++ b/Artigos/Software Livre/references.bib
@@ -10,3 +10,9 @@
   howpublished = {\url{https://www.chromium.org/}},
   note = {Acessado em: 27/12/2017}
 }
+@misc{licencaMIT,
+  author = {MIT, Instituto de Tecnologia de Massachusetts},
+  title = {Licença MIT},
+  howpublished = {\url{https://pt.wikipedia.org/wiki/Licen%C3%A7a_MIT}},
+  note = {Acessado em: 03/01/2017}
+}
